Updates swagger file
