# lesson7/routes/profile.js
@@ -3,6 +3,8 @@ const router = express.Router();
 
 const profileController = require('../controllers/profile');
 
-router.get('/', profileController.profileInfo);
+router.get('/', profileController.profileInfo
+// #swagger.ignore = true
+);
 
 module.exports = router;
