# lesson7/routes/swagger.js
@@ -7,6 +7,8 @@ const swaggerDocument = require('../swagger.json');
 
 
 router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+router.get('/api-docs', swaggerUi.setup(swaggerDocument)
+// #swagger.ignore = true
+);
 
 module.exports = router;
